fix line chart style and visibility

--- a/src/components/admin/dashboard/podium-item/podium-item.style.scss
+++ b/src/components/admin/dashboard/podium-item/podium-item.style.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 25%;
+  width: 28%;
   text-align: center;
 
   .image-box {
