--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -88,6 +88,10 @@ label {
   width: 100%;
 }
 
+.full-height {
+  height: 100%;
+}
+
 .width50procents {
   width: 50%;
 }
